# YouTube_Toxic

./: Cursor_Rules.md  Group 3 - Practicum Spotlight.txt  Project_Breakdown.md  README.md
toxicity-analyzer/: .gitignore  package-lock.json  package.json
toxicity-analyzer/app/: globals.css  page.tsx
toxicity-analyzer/app/about/: page.tsx
toxicity-analyzer/app/api/analysis-progress/[id]/: route.ts
toxicity-analyzer/app/api/analyze/: route.ts
toxicity-analyzer/app/api/analyze-channel/: route.ts
toxicity-analyzer/app/api/channel/[id]/: route.ts
toxicity-analyzer/app/api/channel/[id]/complete-analysis/: route.ts
toxicity-analyzer/app/api/test-youtube/: route.ts
toxicity-analyzer/app/api/toxicity/analytics/: route.ts
toxicity-analyzer/app/api/toxicity/temporal/: route.ts
toxicity-analyzer/backend/: main.py  pyproject.toml  requirements.txt  toxicity_processor.py  youtube_ingestion.py
toxicity-analyzer/backend/tests/: test_db_query.py  test_modal.py
toxicity-analyzer/components/: AnalysisProgress.tsx  ChannelInput.tsx  ChannelResults.tsx  EngagementAnalysis.tsx  InputForm.tsx  TestYouTubeFetcher.tsx  ToxicityChart.tsx  ToxicityDashboard.tsx  ToxicityVisualizations.tsx  UserAnalysis.tsx  UserInsights.tsx  VideoInsights.tsx
toxicity-analyzer/components/visualizations/: TemporalPatterns.tsx
toxicity-analyzer/lib/: toxicity.ts  youtube.ts  youtubeDataFetcher.tsx
uw-ranked/: package-lock.json  package.json
uw-ranked/app/: page.tsx
uw-ranked/app/api/analyze/: route.ts
uw-ranked/lib/: youtube.ts
(+5 files in other folders)
