[project]
name = "backend"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "detoxify>=0.5.2",
    "fastapi>=0.115.12",
    "google-api-python-client>=2.171.0",
    "modal>=1.0.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "supabase>=2.15.2",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
]
